<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Video Browser</string>
    <string name="ask">Ask</string>
    <string name="bookmark2_button">Bookmark</string>
    <string name="channel_download_videos">Download Videos</string>
    <string name="clear">清空数据库</string>
    <string name="copy_button">Copy</string>
    <string name="delete">Delete</string>
    <string name="download">download</string>
    <string name="download_complete">Download completed</string>
    <string name="download_ready">Ready to download the video</string>
    <string name="download_video">Download video</string>
    <string name="edit">Edit</string>
    <string name="failed_to_create_task">Failed to create task</string>
    <string name="failed_to_get_video_list">Failed to get video list</string>
    <string name="favorite_border">Add bookmark</string>
    <string name="help_outline">Help</string>
    <string name="merge_complete">Merger complete</string>
    <string name="merge_start">mergeStart</string>
    <string name="need_permissions">The application cannot run without the necessary permissions</string>
    <string name="parsing">Parsing…</string>
    <string name="playlist_play">Video</string>
    <string name="refresh_button">Refresh</string>
    <string name="save">保存页面</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="video_list_name">Browse videos</string>
    <string name="waiting">Waiting</string>
    <string name="whether_to_use_the_browser_to_open_the_video_link">Whether to use the browser to open the video link</string>
    <string name="unable_to_extract_video">Unable to extract the video</string>
    <string name="error_cleartext_not_permitted">Cleartext HTTP traffic not permitted. See https://exoplayer.dev/issues/cleartext-not-permitted</string>

    <string name="error_generic">Playback failed</string>

    <string name="error_drm_unsupported_before_api_18">DRM content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="start_downloading_the_b_station_video">Start downloading the B station video</string>
    <string name="video_downloaded_successfully">Video downloaded successfully</string>
    <string name="start_merging_videos">Start merging videos</string>
    <string name="videos_successfully_merged">Videos successfully merged</string>
    <string name="ready_to_download_station_b_video">Ready to download station B video</string>
    <string name="download_failed">download failed</string>
    <string name="pause">pause</string>
    <string name="start_download">start download</string>
    <string name="video_downloaded">Video downloaded</string>
    <string name="create_task">Create task...</string>
<string name="linear_burn._in_this_mode (which_is_actually_a_combination_of_multiply_and_color_burn),_photoshop_analyzes_each_channel_and_then_darkens_your_image_by_decreasing_the_brightness_between_the_base_and_blend_colors (layer_order_doesn’t_matter);_the_darker_the_blend_color,_the_darker_the_result._linear_burn_produces_the_darkest_colors_of_any_darken_blend_mode,_though_with_a_bit_more_contrast_than_the_others._it_has_a_tendency_to_turn_dark_pixels_solid_black,_which_makes_it_ideal_for_grungy,_textured_collages_like_the_one_in_figure 7-11._keyboard_shortcut:_shift-option-a (shift+alt+a).">Linear Burn. In this mode (which is actually a combination of Multiply and Color Burn), Photoshop analyzes each channel and then darkens your image by decreasing the brightness between the base and blend colors (layer order doesn’t matter); the darker the blend color, the darker the result. Linear Burn produces the darkest colors of any darken blend mode, though with a bit more contrast than the others. It has a tendency to turn dark pixels solid black, which makes it ideal for grungy, textured collages like the one in Figure 7-11. Keyboard shortcut: Shift-Option-A (Shift+Alt+A).</string>
</resources>